@@ -7,30 +7,17 @@ namespace Rivet {
 
 
   ParticlePair beams(const Event& e) {
-    Beam beamproj;
-    beamproj.project(e);
-    return beamproj.beams();
+    assert(e.genEvent()->particles_size() >= 2);
+    if (e.genEvent()->valid_beam_particles()) {
+      pair<HepMC::GenParticle*, HepMC::GenParticle*> beams = e.genEvent()->beam_particles();
+      assert(beams.first && beams.second);
+      return ParticlePair{beams.first, beams.second};
+    } else if (e.genEvent()->barcode_to_particle(1) && e.genEvent()->barcode_to_particle(2)) {
+      return ParticlePair{e.genEvent()->barcode_to_particle(1), e.genEvent()->barcode_to_particle(2)};
+    }
+    return ParticlePair{Particle(PID::ANY, FourMomentum()), Particle(PID::ANY, FourMomentum())};
   }
 
-  PdgIdPair beamIds(const Event& e) {
-    Beam beamproj;
-    beamproj.project(e);
-    return beamproj.beamIds();
-  }
-
-  PdgIdPair beamIds(const ParticlePair& beams) {
-    return make_pair(beams.first.pid(), beams.second.pid());
-  }
-
-  double sqrtS(const Event& e) {
-    Beam beamproj;
-    beamproj.project(e);
-    return beamproj.sqrtS();
-  }
-
-  double sqrtS(const ParticlePair& beams) {
-    return sqrtS(beams.first.momentum(), beams.second.momentum());
-  }
 
   double sqrtS(const FourMomentum& pa, const FourMomentum& pb) {
     const double mom1 = pa.pz();
@@ -42,43 +29,33 @@ namespace Rivet {
   }
 
 
+  double asqrtS(const ParticlePair& beams) {
+    return sqrtS(beams) / (nuclA(beams.first) + nuclA(beams.second));
+  }
+
+
 
   /////////////////////////////////////////////
 
 
 
   void Beam::project(const Event& e) {
-    assert(e.genEvent()->particles_size() >= 2);
-    if (e.genEvent()->valid_beam_particles()) {
-      pair<HepMC::GenParticle*, HepMC::GenParticle*> beams = e.genEvent()->beam_particles();
-      assert(beams.first && beams.second);
-      _theBeams.first = *(beams.first);
-      _theBeams.second = *(beams.second);
-    } else if(e.genEvent()->barcode_to_particle(1) && e.genEvent()->barcode_to_particle(2)) {
-      _theBeams.first = *(e.genEvent()->barcode_to_particle(1));
-      _theBeams.second = *(e.genEvent()->barcode_to_particle(2));
-    }
-    else {
-      _theBeams.first = Particle(PID::ANY, FourMomentum());
-      _theBeams.second = Particle(PID::ANY, FourMomentum());
-    }
-    //MSG_DEBUG("Beam particle IDs = " << beamIds());
+    _theBeams = Rivet::beams(e);
+    MSG_DEBUG("Beam particles = " << _theBeams << " => sqrt(s) = " << sqrtS()/GeV << " GeV");
   }
 
 
   double Beam::sqrtS() const {
-    double sqrts = Rivet::sqrtS(beams());
-    //MSG_DEBUG("sqrt(s) = " << sqrts/GeV << " GeV");
-    return sqrts;
+    return Rivet::sqrtS(beams());
   }
 
 
   FourVector Beam::pv() const {
     HepMC::FourVector v1, v2;
-    ParticlePair bpair = beams();
-    if (bpair.first.genParticle() != NULL && bpair.first.genParticle()->end_vertex() != NULL)
+    const ParticlePair bpair = beams();
+    if (bpair.first.genParticle() && bpair.first.genParticle()->end_vertex())
       v1 = bpair.first.genParticle()->end_vertex()->position();
-    if (bpair.second.genParticle() != NULL && bpair.second.genParticle()->end_vertex() != NULL)
+    if (bpair.second.genParticle() && bpair.second.genParticle()->end_vertex())
       v2 = bpair.second.genParticle()->end_vertex()->position();
     const FourVector rtn = (v1 == v2) ? FourVector(v1.t(), v1.x(), v1.y(), v1.z()) : FourVector();
     MSG_DEBUG("Beam PV 4-position = " << rtn);
